Split setup.sh into update-component.sh
Allow updating individual components instead of re-running
setup.sh entirely